--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
     entrypoint: ["/bin/sh", "-c"]
     command:
       - |
-        python processor.py --help
-        python processor.py --input /mnt/vol/input_file_location/ --output /mnt/vol/output 
+#        python processor.py --help
+        python processor.py --input-dir /mnt/vol/input/ --output-dir /mnt/vol/output
         #There is an option to pass config file to each proces
         #python processor.py --input /mnt/vol/input_file_location/ --output /mnt/vol/output --config /mnt/vol/configfile
         
